# Test-Dependabot

.github/: dependabot.yml
api/: pyproject.toml
web/: Dockerfile  Dockerfile.local  Makefile  embedded_sample.html  eslint.config.js  package-lock.json  package.json  schema.prisma  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vite.docker.config.ts
web/src/: app.css  app.d.ts  app.html  hooks.client.ts  hooks.server.ts
web/src/lib/: prisma.ts  schema.ts  sqlserver.ts
web/src/lib/components/companyWide/: CompanyWideHeader.svelte  CompanyWideHeaderForThread.svelte
web/src/lib/components/svg/: HelpOutline.svelte
web/src/lib/components/ui/: CompanyWideThreadMessage.svelte  DeleteButton.svelte  EmojiPicker.svelte  Navbar.svelte  Toaster.svelte
web/src/lib/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  dropdown-menu-content.svelte  dropdown-menu-item.svelte  dropdown-menu-radio-item.svelte  dropdown-menu-sub-content.svelte  dropdown-menu-sub-trigger.svelte
web/src/lib/components/ui/file/: UploadedFileName.svelte
web/src/lib/components/ui/input/: MessageDocumentInput.svelte  ResizableTextArea.svelte
web/src/lib/components/ui/message/: AssistantMessage.svelte  QAndAAssistantMessage.svelte  QAndAUserMessage.svelte  SearchAssistantMessage.svelte
web/src/lib/components/ui/modal/: QAndAAssistantDetailDialog.svelte  QAndAAssistantEditDialog.svelte  SearchAssistantDetailDialog.svelte  SearchAssistantEditDialog.svelte  UserFeedbackDialog.svelte
web/src/lib/components/ui/sidebar/: Sidebar.svelte  SidebarContent.svelte
web/src/lib/dtos/: index.ts
web/src/lib/entities/: assistantRunningStatus.ts  index.ts
web/src/lib/features/all/: request.ts  schema.ts
web/src/lib/features/assistant/: assistantDto.ts
web/src/lib/features/assistant/entities/: StreamingMessage.ts  assistantMessage.ts  message.ts  thread.ts  threadMessage.ts
web/src/lib/features/assistant/hooks/: useRunConversationAsssitant.ts
web/src/lib/features/assistant/repositories/: assistantQuery.ts
web/src/lib/features/companyWide/: constant.ts
web/src/lib/features/companyWide/entities/: companyWideAssistant.ts  companyWideThread.ts  companyWideThreadList.ts
web/src/lib/features/companyWide/hooks/: useCompanyWideAssistant.ts
web/src/lib/features/companyWide/repositories/: companyWideAssistantQuery.ts  companyWideThreadQuery.ts
web/src/lib/features/companyWide/workflows/: createThreadWorkflow.ts  retrieveCompanyWideAssistant.ts  retrieveCompanyWideAssistants.ts  retrieveCompanyWideThread.ts  retrieveCompanyWideThreadList.ts
web/src/lib/features/group/repositories/: groupQuery.ts
web/src/lib/features/message_document/: messageDocumentDto.ts
web/src/lib/features/message_document/consts/: fileRestrictions.ts
web/src/lib/features/q_and_a/: qAndADtos.ts  qAndASchema.ts  qAndAStore.ts
web/src/lib/features/q_and_a/entities/: qAndAAssistant.ts  (+3 more)
web/src/lib/features/search/: searchDto.ts  search_schema.ts
web/src/lib/icons/: Trash.svelte  faq.svelte  home.svelte  message.svelte  search.svelte
web/src/lib/stores/: assistantRunningStatusMapStore.ts  defaultPrompt.ts  isChatSidebarVisible.ts  messageDocumentsStore.ts  messages.ts  searchAssistantMessageStore.ts  selectedModelStore.ts
web/src/lib/stream/: custom_stream.ts
web/src/lib/utils/: fromNow.ts  generateUniqueID.ts  laravel.ts  referenceUtils.ts  splitToJsons.ts  tokenizer.ts
web/src/routes/: +error.svelte  +layout.svelte  +page.svelte
web/src/routes/(home)/: +layout.server.ts  +layout.svelte
web/src/routes/(home)/assistant/: +page.server.ts  +page.svelte
web/src/routes/(home)/q-and-a/: +page.server.ts  +page.svelte
web/src/routes/(home)/search/: +page.server.ts  +page.svelte
web/src/routes/401/: +page.server.ts  +page.svelte
web/src/routes/403/: +page.svelte
web/src/routes/all/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
web/src/routes/all/history/: +page.server.ts  +page.svelte
web/src/routes/api/runConversationAssistant/: +server.ts
web/src/routes/api/runQAndAAssistant/: +server.ts
web/src/routes/api/runSearchAssistant/: +server.ts
web/src/routes/api/upsertMessageFeedback/: +server.ts
web/src/routes/chat/: +layout.server.ts
web/src/routes/logout/: +page.server.ts  +page.svelte
(+25 files in other folders)
