[tool.poetry]
name = "api"
version = "0.1.0"
description = "Example of API server implementation using Langchain based on clean architecture"
authors = ["mkazutaka <paper.sheet.kami@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13" # unstructured をインストールするために "^3.10" → ">=3.10,<3.13" に変更
fastapi = "^0.100.0"
langchain = "^0.1.16"
dependency-injector = "^4.41.0"
uvicorn = "^0.23.1"
openai = "^1.23.2"
taskipy = "^1.11.0"
python-dotenv = "^1.0.0"
azure-search-documents = "11.4.0"
tenacity = "^8.2.2"
pypdf = "^4.3.1"
pandas = "^2.0.3"
openpyxl = "^3.1.2"
azure-ai-textanalytics = "^5.3.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.47.0"}
stringcase = "^1.2.0"
boxsdk = "^3.8.1"
prisma = "^0.13.1"
pycryptodome = "^3.18.0"
pykakasi = "^2.2.1"
google = "^3.0.0"
gspread = "^5.11.0"
nanoid = "^2.0.0"
tiktoken = "^0.11.0"
environs = "^9.5.0"
pydantic-settings = "^2.2.1"
langchain-community = "^0.0.34"
langchain-openai = "^0.1.3"
azure-storage-blob = "^12.20.0"
python-multipart = "^0.0.9"
unstructured = {extras = ["xlsx"], version = "^0.14.4"}
docx2txt = "^0.8"
aiofiles = "^24.1.0"
tqdm = "^4.66.5"
pymupdf = "^1.26.3"
ragas = "0.3.5"
requests = "2.32.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"
black = "^23.7.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.4.1"
pytest-asyncio = "^0.21.1"
types-requests = "^2.31.0"
types-pytz = "^2025.2.0"
types-python-dateutil = "^2.9.0"
pre-commit = "^4.3.0"
pandas-stubs = "^2.3.2.250926"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py37"
[[tool.pysen.lint.mypy_targets]]
paths = ["app"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
dev = "uvicorn app.main:app --reload --port 8002"
docker-dev = "uvicorn app.main:app --reload --host 0.0.0.0"

fmt = "task fmt-black && task fmt-isort"
fmt-black = "black app batches"
fmt-isort = "isort app batches"
lint = "task lint-mypy && task lint-flake8"
lint-mypy = "mypy --explicit-package-bases app batches"
lint-flake8 = "flake8 --show-source app batches"
test = "python -m pytest -s --ignore=tests/e2e_tests"
e2e = "python -m pytest -s --ignore=tests/local_tests"

docker-build = "docker build -t pw-api ."
docker-run = "docker run -p 8000:8000 --env-file=.env pw-api"

batch-sync-box = "python -m batches.sync_box.main"
batch-sync-box-v2 = "python -m batches.sync_box_v2.main"
batch-transfer-v1-feedback-to-v3 = "python -m batches.transfer_v1_feedback_to_v3.main"
batch-create-or-update-index = "python -m batches.create_or_update_index.main"

test-batch-sync-box = "python -m pytest -s tests/batch_tests/sync_box/test_main.py"
test-batch-sync-box-2 = "python -m pytest -s tests/batch_tests/sync_box/test_fetch_items.py"

#temp = "python -m pytest -s tests/e2e_tests/test_chat_document_references.py"
#temp = "python -m pytest -s tests/e2e_tests/test_chat_conversations.py"
#temp = "python -m pytest -s tests/e2e_tests/test_document_references.py"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# パフォーマンス改善のための設定
incremental = true
cache_dir = ".mypy_cache"
# 大きなファイルや外部ライブラリを除外
exclude = [
    "venv",
    "\\.venv",
    "node_modules",
    "build",
    "dist",
    "\\.git",
    "__pycache__",
    "tests/.*",
    "tests",
    # 使用していないモジュール
    "batches/sync_box/*", # デプロイされて定期実行されてはいるが実際には利用されていないJob
    "batches/transfer_v1_feedback_to_v3/*", # デプロイはされているが実行されていないJob
]

[[tool.mypy.overrides]]
# 型定義のないモジュール以下に追加する
module = [
    "nanoid.*",
    "gspread.*",
    "pymupdf.*",
    "tqdm.asyncio.*",
    "google.oauth2.*",
    "prisma",
    "prisma.*",
]
ignore_missing_imports = true
